# rusty-api

./: Cargo.toml  Dockerfile  LICENSE  nixpacks.toml
src/: db.rs  main.rs
src/guards/: user.rs
src/routes/: test.rs  user.rs
